# Chivalry-2-Competitive-Platform-Backend

./: .env  .env-local  Cargo.toml  Dockerfile  compose.yaml  config.json
src/: main.rs  model.rs  schema.rs
src/routes/: account.rs  login.rs  matchmake.rs  mod.rs  ping.rs  signup.rs
src/utils/: hashing.rs  mod.rs  tokens.rs
src/wrapper/: auth_wrapper.rs  mod.rs
