[package]
name = "city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.25", default-features = false, features = [
    "std",
] }
actix-form-data = "0.6.2"
actix-web = {version = "4"}
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = "0.28.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
diesel = { version = "2.0.2", features = ["mysql", "chrono", "serde_json"] }
askama = "0.11.1"
lazy_static = "1.4.0"
actix = "0.13.1"
dotenv = "0.15.0"
derive_more = "0.99.17"
bcrypt = "0.15.0"
rand = "0.8.5"
chrono = {version = "0.4.33", features = ["serde"]}
actix-web-httpauth = "0.8.1"
actix-cors = "0.7.0"
env_logger = "0.11.1"
actix-identity = "0.7.0"
